improve test evidence coverage (via #1291)